CHANGELOG fuer c't-Bot
======================
2006-02-01	Benjamin Benz (bbe@heise.de) Bugfix im Verhaltenscode. BOT_SPEED_IGNORE eingefügt

2006-02-01	Benjamin Benz (bbe@heise.de) Brake-Konstante angepasst

2006-01-31	Benjamin Benz (bbe@heise.de) Kommentare aktualisiert, GPL-Infos eingebaut

2006-01-31	Benjamin Benz (bbe@heise.de) Testprogramme erstellt und dabei kleine Fehler ausgebessert

2006-01-30	Benjamin Benz (bbe@heise.de) Sensoren ueberarbeitet, Encoder reaktiviert

2006-01-30	Benjamin Benz (bbe@heise.de) sensDistL und sensDistR initialisieren bun mit 1023 ==> keine Rotation zu Beginn mehr

2006-01-28	Andreas Merkle (mail@blue-andi.de) Beim Ausfuehren von Verhalten werden Verhalten mit gleicher Prioritaet nun
											   additiv behandelt und erst dann die Werte gesetzt.
											   Im Verhalten bot_avoid_col wurde die Geschwindigkeitsaenderung nicht in die
											   Verhaltenstruktur geschrieben. Dieses wurde korrigiert.
											   Beim Anlegen einer Verhaltensstruktur wird nun ueberprueft, ob
											   genuegend Heap-Speicher vorhanden ist.

2006-01-27	Benjamin Benz (bbe@heise.de) Patch von Andreas Merkle (mail@blue-andi.de) eingebaut. Man kann Verhalten 
										 jetzt vereinfacht laden

2006-01-26	Benjamin Benz (bbe@heise.de) Gesamtes Verhalten umgestellt. es gibt jetzt ein eigenes 
										 Verhaltens-Framework.

2006-01-26	Benjamin Benz (bbe@heise.de) Kommentare geaendert

2006-01-25	Benjamin Benz (bbe@heise.de) Status der LEDs wird nun an den Simulator übertragen

2006-01-24	Benjamin Benz (bbe@heise.de) Schreibweise des Changelogs nochmal verändert